compiler/parser/src/snapshots/rustpython_parser__fstring__tests__fstring_parse_selfdocumenting_format.snap
---
source: compiler/parser/src/fstring.rs
expression: parse_ast
---
[
    Located {
        start: Location {
            row: 0,
            column: 0,
        },
        end: Location {
            row: 0,
            column: 0,
        },
        custom: (),
        node: Constant {
            value: Str(
                "user=",
            ),
            kind: None,
        },
    },
    Located {
        start: Location {
            row: 0,
            column: 0,
        },
        end: Location {
            row: 0,
            column: 0,
        },
        custom: (),
        node: Constant {
            value: Str(
                "",
            ),
            kind: None,
        },
    },
    Located {
        start: Location {
            row: 0,
            column: 0,
        },
        end: Location {
            row: 0,
            column: 0,
        },
        custom: (),
        node: FormattedValue {
            value: Located {
                start: Location {
                    row: 1,
                    column: 2,
                },
                end: Location {
                    row: 1,
                    column: 6,
                },
                custom: (),
                node: Name {
                    id: "user",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: Some(
                Located {
                    start: Location {
                        row: 0,
                        column: 0,
                    },
                    end: Location {
                        row: 0,
                        column: 0,
                    },
                    custom: (),
                    node: JoinedStr {
                        values: [
                            Located {
                                start: Location {
                                    row: 0,
                                    column: 0,
                                },
                                end: Location {
                                    row: 0,
                                    column: 0,
                                },
                                custom: (),
                                node: Constant {
                                    value: Str(
                                        ">10",
                                    ),
                                    kind: None,
                                },
                            },
                        ],
                    },
                },
            ),
        },
    },
]
