compiler/parser/src/snapshots/rustpython_parser__fstring__tests__parse_fstring_nested_spec.snap
---
source: compiler/parser/src/fstring.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 0,
            column: 0,
        },
        end_location: Location {
            row: 0,
            column: 0,
        },
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 2,
                },
                end_location: Location {
                    row: 1,
                    column: 5,
                },
                custom: (),
                node: Name {
                    id: "foo",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: Some(
                Located {
                    location: Location {
                        row: 0,
                        column: 0,
                    },
                    end_location: Location {
                        row: 0,
                        column: 0,
                    },
                    custom: (),
                    node: JoinedStr {
                        values: [
                            Located {
                                location: Location {
                                    row: 0,
                                    column: 0,
                                },
                                end_location: Location {
                                    row: 0,
                                    column: 0,
                                },
                                custom: (),
                                node: FormattedValue {
                                    value: Located {
                                        location: Location {
                                            row: 1,
                                            column: 2,
                                        },
                                        end_location: Location {
                                            row: 1,
                                            column: 6,
                                        },
                                        custom: (),
                                        node: Name {
                                            id: "spec",
                                            ctx: Load,
                                        },
                                    },
                                    conversion: 0,
                                    format_spec: None,
                                },
                            },
                        ],
                    },
                },
            ),
        },
    },
]
