compiler/parser/src/snapshots/rustpython_parser__fstring__tests__parse_fstring_not_equals.snap
---
source: compiler/parser/src/fstring.rs
expression: parse_ast
---
[
    Located {
        start: Location {
            row: 0,
            column: 0,
        },
        end: Location {
            row: 0,
            column: 0,
        },
        custom: (),
        node: FormattedValue {
            value: Located {
                start: Location {
                    row: 1,
                    column: 4,
                },
                end: Location {
                    row: 1,
                    column: 8,
                },
                custom: (),
                node: Compare {
                    left: Located {
                        start: Location {
                            row: 1,
                            column: 2,
                        },
                        end: Location {
                            row: 1,
                            column: 3,
                        },
                        custom: (),
                        node: Constant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    },
                    ops: [
                        NotEq,
                    ],
                    comparators: [
                        Located {
                            start: Location {
                                row: 1,
                                column: 7,
                            },
                            end: Location {
                                row: 1,
                                column: 8,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
]
