compiler/parser/src/snapshots/rustpython_parser__fstring__tests__parse_fstring_selfdoc_prec_space.snap
---
source: compiler/parser/src/fstring.rs
expression: parse_ast
---
[
    Located {
        start: Location {
            row: 0,
            column: 0,
        },
        end: Location {
            row: 0,
            column: 0,
        },
        custom: (),
        node: Constant {
            value: Str(
                "x   =",
            ),
            kind: None,
        },
    },
    Located {
        start: Location {
            row: 0,
            column: 0,
        },
        end: Location {
            row: 0,
            column: 0,
        },
        custom: (),
        node: Constant {
            value: Str(
                "",
            ),
            kind: None,
        },
    },
    Located {
        start: Location {
            row: 0,
            column: 0,
        },
        end: Location {
            row: 0,
            column: 0,
        },
        custom: (),
        node: FormattedValue {
            value: Located {
                start: Location {
                    row: 1,
                    column: 2,
                },
                end: Location {
                    row: 1,
                    column: 3,
                },
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Load,
                },
            },
            conversion: 114,
            format_spec: None,
        },
    },
]
